# log-server

./: .dockerignore  .gitignore  AI-Init.md  AI-Project-DNA.md  AI-Session-State.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  TESTING.md  TODO.md  build.rs  docker-compose.yml  standalone.yaml  test_exe  test_exe.rs
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
doc/: topology.md
pkg/mod/cache/download/golang.org/x/tools/@v/: list
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/!burnt!sushi/: toml@v1.5.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/fatih/: camelcase@v1.0.0  gomodifytags@v1.17.1-0.20250423142747-f3939df9aa3c  structtag@v1.2.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/fsnotify/: fsnotify@v1.9.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/mvdan.cc/: gofumpt@v0.8.0
pkg/sumdb/sum.golang.org/: latest
proto/: log_service.proto
quick-overview/: Architecture-Overview.md  Features-Behavior.md  General-Misc.md  Testing-Playbook.md
src/: lib.rs  main.rs
src/config/: config.rs
src/core/: log_formatter.rs  log_server.rs  log_writer.rs  mod.rs  protocol_handlers.rs  reorder_test.rs  servers.rs
src/facade/: log_server.rs  log_writer.rs  mod.rs
src/models/: log_entry.rs  log_packet.rs  mod.rs
src/protocols/capnp/: logger_msg.rs  mod.rs
src/schema/capnp/: logger.capnp
src/servers/: grpc_server.rs  mod.rs  tcp_server.rs
src/transport/: mod.rs  safe_socket.rs
src/utils/: helpers.rs  mod.rs  terminal_ui.rs
tests/: integration_tests.rs
(+31 files in other folders)
