[package]
name = "log-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
capnp = "0.19"
capnpc = "0.19"
clap = { version = "4.0", features = ["derive"] }
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
microservice-toolbox = { git = "https://github.com/Bastien-Antigravity/microservice-toolbox.git", tag = "rust/v0.1.5" }

[build-dependencies]
tonic-build = "0.12"
