[package]
name = "log-server"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
capnp = "0.19"
capnpc = "0.19"
clap = { version = "4.0", features = ["derive"] }
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
microservice-toolbox = { path = "../microservice-toolbox/rust" }
tonic = "0.9"
prost = "0.11"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.9"
